# PrivacyRaven

./: .README.md.swp  .coverage  .flake8  .pre-commit-config.yaml  .python-version  CODEOWNERS  CONTRIBUTING.md  Dockerfile  README.md  build.sh  noxfile.py  noxfile_backup.py  noxfile_updated.py  pyproject.toml  pyproject_backup.toml  pyproject_updated.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docker/: Dockerfile  build.sh
examples/: .cpu.py.swp  README.md  create_model.py  create_synthesizer.py  example_pytorch_callback.py  extract_mnist.py  extract_mnist_cpu.py  extract_mnist_gpu.py  m_inf_mnist.py  membership_inference_mnist.py  new.py  robust_mnist.py  test.py
nbs/: AdverTorch.ipynb  Foolbox.ipynb  KnockoffNet.ipynb  README.md  Tramer.ipynb
nbs/lightning_logs/version_0/: events.out.tfevents.1593891496.suhacker-GS65-Stealth-Thin-8RF.5745.0
nbs/lightning_logs/version_0/checkpoints/: epoch=5.ckpt
nbs/lightning_logs/version_1/: events.out.tfevents.1594167154.suhacker-GS65-Stealth-Thin-8RF.3503.0
nbs/lightning_logs/version_1/checkpoints/: epoch=2.ckpt
nbs/lightning_logs/version_2/: events.out.tfevents.1594167191.suhacker-GS65-Stealth-Thin-8RF.3785.0
nbs/lightning_logs/version_2/checkpoints/: epoch=3.ckpt
nbs/lightning_logs/version_3/: events.out.tfevents.1594167548.suhacker-GS65-Stealth-Thin-8RF.5709.0
nbs/lightning_logs/version_3/checkpoints/: epoch=3.ckpt
nbs/lightning_logs/version_4/: events.out.tfevents.1594168325.suhacker-GS65-Stealth-Thin-8RF.6696.0
nbs/lightning_logs/version_4/checkpoints/: epoch=2.ckpt
src/PrivacyRaven/: __init__.py
src/privacyraven/: .extraction.py.swp  .synthesis.py.swp  CONTRIBUTING.md  README.md  __init__.py  console.py  data.py  datasets.py  evaluate.py  extraction.py  mia.py  mnist.py  models.py  public_data.py  query.py  rand.py  retrain.py  run.py  synthesis.py  synthesize.py  utils.py  version.py  victim.py
src/privacyraven.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/privacyraven/example/: Valid.ipynb  last.py  test.py
src/privacyraven/extraction/: attacks.py  core.py  metrics.py  synthesis.py
src/privacyraven/inversion/: attacks.py  core.py
src/privacyraven/lightning_logs/version_0/: events.out.tfevents.1591774676.suhacker-GS65-Stealth-Thin-8RF.10833.0
src/privacyraven/lightning_logs/version_1/: events.out.tfevents.1591774795.suhacker-GS65-Stealth-Thin-8RF.11331.0
src/privacyraven/lightning_logs/version_2/: events.out.tfevents.1591774969.suhacker-GS65-Stealth-Thin-8RF.11851.0  (+1 more)
src/privacyraven/m_inf/: core.py
src/privacyraven/m_inference/: core.py  robustness.py
src/privacyraven/membership_inf/: Proto.ipynb  core.py  distance.py  metric.py  robustness.py
src/privacyraven/model_extraction/: extraction.py
src/privacyraven/models/: four_layer.py  inversion_model.py  models.py  new.ipynb  pytorch.py  victim.py
src/privacyraven/utils/: data.py  evaluate.py  model_creation.py  query.py
tests/: gen.py  generate.py  mocks.py  test_console.py  test_extraction.py  test_extraction_core.py  test_extraction_metrics.py  test_extraction_synthesis.py  test_synthesis.py  test_utils_data.py  test_utils_query.py  tests.py
(+5 files in other folders)
