[tool.poetry]
name = "privacyraven"
version = "0.1.0"
description = "privacy testing for deep learning"
readme = "README.md"
homepage = "https://github.com/trailofbits/PrivacyRaven"
repository = "https://github.com/trailofbits/PrivacyRaven"
authors = ["suhacker1 <suhashussain1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.5.0"
torchvision = "^0.6.0"
click = "^7.1.2"
tqdm = "^4.46.1"
matplotlib = "^3.2.1"
pytorch_lightning = "^0.7.6"
ipykernel = "^5.3.0"
attrs = "^19.3.0"
adversarial-robustness-toolbox = "^1.3.3"
sklearn = "^0.0"
pytest = "^6.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.9.0"
pytest-mock = "^3.1.1"
black = "^19.10b0"
flake8 = "^3.8.2"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.0"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
safety = "^1.9.0"
flake8-docstrings = "^1.5.0"

[tool.poetry.scripts]
privacyraven = "privacyraven.console:main"
[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["privacyraven"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
